Correçao de bugs

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Burlas Digitais</string>
+    <string name="app_name">Burla por Email</string>
     <string name="title_activity_home_screen">HomeScreen</string>
     <string name="title_activity_app_navigation">AppNavigation</string>
 </resources>
